[package]
name = "univ3-pool-states"
version = "0.1.0"
edition = "2021"

[dependencies]

db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", features = [
  "alloy-types",
] }

# clickhouse
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master" }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "ac29b4b" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "ac29b4b" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "ac29b4b" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "ac29b4b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "ac29b4b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "ac29b4b" }
reth-api-libmdbx = { git = "https://github.com/jnoorchashm37/reth-api-libmdbx" }

# alloy
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-sol-types = { version = "0.7.0", features = ["json"] }
alloy-sol-macro = { version = "0.7.0", features = ["json"] }
alloy-primitives = { version = "0.7.0", features = ["rlp"] }


# error handling
thiserror = "1.0.44"
jsonrpsee = { version = "0.20", features = ["server", "macros"] }
eyre = "0.6.5"

# serde
serde = "1.0"

# async
async-trait = "0.1.73"
tokio = { version = "1.28.2", features = ["full"] }
futures-util = "0.3.21"
futures = "0.3.28"
tokio-stream = "0.1.14"

# cli
clap = { version = "4", features = ["derive"] }

# misc
dotenv = "0.15.0"
rayon = "1.10.0"


# tracing
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }




